# AirSense

./: .env.example  air-sense-n8n-workflow.json
client/: .env  index.html  package-lock.json  package.json
client/src/: App.tsx  main.tsx
client/src/components/layout/: AppSidebar.tsx  MainLayout.tsx  ProtectedRoute.tsx  PublicRoute.tsx
client/src/components/map/: LocationSearch.tsx  MapView.tsx  RouteMap.tsx
client/src/hooks/: useForecast.ts  useNearestAQI.ts  useWeather.ts
client/src/lib/: api.ts  auth.ts  axios.ts  hooks.ts  index.ts  queryConfig.ts  tripsService.ts  weatherCodeMap.ts  weatherService.ts
client/src/pages/: ChatBot.tsx  Dashboard.tsx  Helpline.tsx  Login.tsx  Personalize.tsx  PlanTrip.tsx  Profile.tsx  ReportPollution.tsx  Signup.tsx
client/src/stores/: aqiStore.ts  authStore.ts  personalizationStore.ts
client/src/styles/: index.css
server/: .gitignore  aqi_model_12h.joblib  aqi_model_24h.joblib  aqi_model_6h.joblib  config.py  extensions.py  get_metrics.py  main.py  pyproject.toml  test_trips.py
server/ML/: air_quality_data_rows.csv  aqi_forecast.py  performance_metrics.json
server/auth/: routes.py
server/db/: db_setup.py  s3.py  schmea.py
server/maps/: __init__.py  routes.py  services.py
server/trips/: __init__.py  routes.py  services.py
server/user/: routes.py  services.py
